# kids

./: .gitignore  CMakeLists.txt  Dockerfile  Rockerfile
client/go/: kids.go
src/: client.cc  filesystem.cc  kids.cc  master.cc  worker.cc
src/store/: bufferstore.cc  bufferstore.h  filestore.cc  networkstore.cc  store.cc  store.h
